# togenuki

./: .gitignore  CLAUDE.md  LICENSE  README.md
.kiro/steering/: product.md  structure.md  tech.md
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 47c94c087902_create_initial_tables.py  a1b2c3d4e5f6_add_composed_and_draft_fields.py  b8f2a3c91d04_migrate_to_uuid_v7.py  c3a1b2d4e5f6_add_contact_context_and_learning_failed_at.py  d4e5f6a7b8c9_add_reply_fields_to_emails.py  e5f6a7b8c9d0_add_selected_character_id_to_users.py  f6a7b8c9d0e1_add_thread_id_and_reply_source.py
apps/api/scripts/: test_contacts_api.sh  test_integration_phase2.py
apps/api/src/: config.py  database.py  main.py  models.py
apps/api/src/auth/: __init__.py  firebase_admin.py  gmail_oauth.py  middleware.py  schemas.py
apps/api/src/repositories/: __init__.py  contact_repository.py  email_repository.py
apps/api/src/routers/: __init__.py  characters.py  contacts.py  cron.py  emails.py  gmail_oauth.py  gmail_watch.py  reply.py  webhook.py
apps/api/src/schemas/: __init__.py  character.py  contact.py  email.py  reply.py
apps/api/src/services/: __init__.py  character_service.py  email_processor.py  gemini_service.py  gmail_service.py  gmail_watch.py  instruction_service.py  learning_service.py  reply_service.py  reply_sync_service.py  tts_service.py
apps/api/src/utils/: __init__.py  gcs_signer.py  logging.py
apps/api/tests/: test_auth_middleware.py  test_character_service.py  test_characters_router.py  test_config.py  test_contact_repository.py  test_contacts_endpoint.py  test_cron_renew_watches.py  test_database.py  test_email_processor.py  test_emails_endpoint.py  test_gcs_signer.py  test_gemini_service.py  test_gmail_oauth_endpoints.py  test_gmail_oauth_service.py  test_gmail_service.py  test_gmail_watch.py  test_instruction_service.py  test_integration.py  test_learning_service.py  test_main.py  test_models.py  test_reply_endpoint.py  test_reply_schemas.py  test_reply_service.py  test_reply_sync_service.py  test_tts_service.py  test_webhook_handler.py
apps/web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  biome.json  deploy.sh  docker-entrypoint.sh  (+7 more)
docs/: ARCHITECTURE.md  BLOG.md  GMAIL_PUSH_NOTIFICATION.md
infrastructures/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: get-firebase-token.sh  gmail-watch-via-api.sh  gmail-watch.sh
(+65 files in other folders)
